added position and z-index

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@
 }
 
 body {
-   background-image: url(workspace.jpg);
-   background-repeat: no-repeat;
-   background-size: cover;
+   background-image: url(image.jpg);
+  background-repeat: no-repeat;
+   background-size: cover; 
+ 
 }
